--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,6 +1,7 @@
 include:
   - ./compose/coturn/compose.yaml
   - ./compose/livekit/compose.yaml
+  - ./compose/minio/compose.yaml
   - ./compose/postgres/compose.yaml
 
 networks:
