--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,8 +12,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-router": "^7.9.3",
+    "react-router-dom": "^7.9.3",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "^19.1.10",
