--- a/docker/compose/minio/compose.yaml
+++ b/docker/compose/minio/compose.yaml
@@ -6,7 +6,7 @@ services:
       - "9000:9000"
       - "9001:9001"
     volumes:
-      - ./minio_data:/data
+      - minio-data:/data
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin123
@@ -52,3 +52,7 @@ services:
       "
     networks:
       - verse-network
+
+volumes:
+  minio-data:
+    driver: local
