--- a/docker/compose/postgres/compose.yaml
+++ b/docker/compose/postgres/compose.yaml
@@ -10,6 +10,10 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
     networks:
       - verse-network
+
+volumes:
+  postgres-data:
+    driver: local
