--- a/docker/compose/postgres/compose.yaml
+++ b/docker/compose/postgres/compose.yaml
@@ -5,11 +5,15 @@ services:
     restart: unless-stopped
     environment:
       - POSTGRES_USER=verse
-      - POSTGRES_PASSWORD=verse-secret
+      - POSTGRES_PASSWORD=verse_secret
       - POSTGRES_DB=verse_db
     ports:
       - "5432:5432"
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
     networks:
       - verse-network
+
+volumes:
+  postgres-data:
+    driver: local
