--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -1,7 +1,16 @@
 {
   "extends": "@verse/tsconfig/react.json",
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.tsbuildinfo"
   },
-  "include": ["src", "vite.config.ts"]
+  "include": [
+    "src",
+    "vite.config.ts"
+  ]
 }
