feat: add livekit routes

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -2,3 +2,7 @@ NODE_ENV="development"
 DATABASE_URL="postgres://verse:verse_secret@localhost:5432/verse_db"
 LOG_LEVEL="debug"
 JWT_SECRET="secret"
+
+LIVEKIT_HOST="localhost:7880"
+LIVEKIT_API_KEY="your_api_key"
+LIVEKIT_SECRET_KEY="your_secret_key"
