chore: broken livekit push * for sync sake

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,5 +1,5 @@
 include:
-  - ./compose/coturn/compose.yaml
+  # - ./compose/coturn/compose.yaml  # Not needed for local development
   - ./compose/livekit/compose.yaml
   - ./compose/minio/compose.yaml
   - ./compose/postgres/compose.yaml
@@ -8,4 +8,3 @@ networks:
   verse-network:
     driver: bridge
     name: verse-network
-    external: true
