--- a/docker/compose/livekit/compose.yaml
+++ b/docker/compose/livekit/compose.yaml
@@ -12,6 +12,7 @@ services:
       - ./livekit.yaml:/etc/livekit.yaml:ro,Z
     depends_on:
       - redis
+      - coturn
     networks:
       - verse-network
 
@@ -29,7 +30,3 @@ services:
 volumes:
   redis-data:
     driver: local
-
-networks:
-  verse-network:
-    external: true
