--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -20,8 +20,10 @@
     "hono": "^4.9.4",
     "jsonwebtoken": "^9.0.2",
     "livekit-server-sdk": "^2.14.0",
+    "nanoid": "^5.1.6",
     "pino": "^10.1.0",
     "postgres": "^3.4.7",
+    "ulid": "^3.0.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
