--- a/docker/compose/livekit/livekit.yaml
+++ b/docker/compose/livekit/livekit.yaml
@@ -10,11 +10,12 @@ rtc:
   use_external_ip: false
   # Force the node to advertise localhost as its IP
   node_ip: 127.0.0.1
+  # TURN server configuration for Docker NAT traversal
   turn_servers:
     - host: coturn
       port: 3478
-      protocol: udp  # Use 'tls' if forcing TLS on 5349; 'udp' for standard TURN
-      username: ""  # Empty for shared secret auth
+      protocol: udp # Use 'tls' if forcing TLS on 5349; 'udp' for standard TURN
+      username: "" # Empty for shared secret auth
       credential: verse-turn-secret
 
 redis:
