--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,17 +13,23 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.0",
+    "@livekit/rtc-node": "^0.13.20",
+    "@types/form-data": "^2.5.2",
+    "@types/ws": "^8.18.1",
     "argon2": "^0.44.0",
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.5",
     "drizzle-orm": "^0.44.6",
+    "form-data": "^4.0.4",
     "hono": "^4.9.4",
     "jsonwebtoken": "^9.0.2",
     "livekit-server-sdk": "^2.14.0",
     "nanoid": "^5.1.6",
     "pino": "^10.1.0",
     "postgres": "^3.4.7",
+    "prism-media": "^1.3.5",
     "ulid": "^3.0.1",
+    "ws": "^8.18.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
