feat(dash): Meeting Calls (#8)
Co-authored-by: risv1 <rishi.aangarai@gmail.com>

--- a/docker/compose/livekit/compose.yaml
+++ b/docker/compose/livekit/compose.yaml
@@ -12,6 +12,7 @@ services:
       - ./livekit.yaml:/etc/livekit.yaml:ro,Z
     depends_on:
       - redis
+      - coturn
     networks:
       - verse-network
 
