--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -3,9 +3,9 @@ include:
   - ./compose/livekit/compose.yaml
   - ./compose/minio/compose.yaml
   - ./compose/postgres/compose.yaml
+  - ./compose/whisper/compose.yaml
 
 networks:
   verse-network:
     driver: bridge
     name: verse-network
-    external: true
