feat: add server with groups

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -1,5 +1,6 @@
 NODE_ENV="development"
 DATABASE_URL="postgres://verse:verse_secret@localhost:5432/verse_db"
+REDIS_URL="redis://localhost:6379"
 LOG_LEVEL="debug"
 JWT_SECRET="secret"
 
