--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -28,6 +28,7 @@
     "pino": "^10.1.0",
     "postgres": "^3.4.7",
     "prism-media": "^1.3.5",
+    "redis": "^5.9.0",
     "ulid": "^3.0.1",
     "ws": "^8.18.3",
     "zod": "^4.1.12"
