feat: add client

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -4,6 +4,6 @@ REDIS_URL="redis://localhost:6379"
 LOG_LEVEL="debug"
 JWT_SECRET="secret"
 
-LIVEKIT_HOST="localhost:7880"
-LIVEKIT_API_KEY="your_api_key"
-LIVEKIT_SECRET_KEY="your_secret_key"
+LIVEKIT_HOST="http://localhost:7880"
+LIVEKIT_API_KEY=verse-api-key
+LIVEKIT_SECRET_KEY=verse-api-secret-value-here-change-me
