--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "build": "esbuild src/index.ts --bundle --platform=node --target=node20 --format=esm --outdir=dist --sourcemap --external:@hono/* --external:@livekit/* --external:argon2 --external:dotenv --external:drizzle-orm --external:form-data --external:hono --external:jsonwebtoken --external:livekit-server-sdk --external:nanoid --external:pino --external:postgres --external:prism-media --external:ulid --external:ws --external:zod --external:redis --external:node:*",
     "start": "node dist/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -40,6 +40,7 @@
     "@verse/prettier-config": "workspace:*",
     "@verse/tsconfig": "workspace:*",
     "drizzle-zod": "^0.8.3",
+    "esbuild": "^0.20.2",
     "eslint": "^9.33.0",
     "pino-pretty": "^13.1.2",
     "prettier": "^3.0.0",
